tests/baselines/reference/tsxEmit3.errors.txt
file.tsx(18,2): error TS2695: Left side of comma operator is unused and has no side effects.
file.tsx(22,3): error TS2695: Left side of comma operator is unused and has no side effects.
file.tsx(25,3): error TS2695: Left side of comma operator is unused and has no side effects.
file.tsx(38,2): error TS2695: Left side of comma operator is unused and has no side effects.


==== file.tsx (4 errors) ====
    declare namespace JSX {
    	interface Element { }
    	interface IntrinsicElements { }
    }
    
    namespace M {
    	export class Foo { constructor() { } }
    	export namespace S {
    		export class Bar { }
    
    		// Emit Foo
    		// Foo, <Foo />;
    	}
    }
    
    namespace M {
    	// Emit M.Foo
    	Foo, <Foo />;
    	~~~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
    
    	export namespace S {
    		// Emit M.Foo
    		Foo, <Foo />;
    		~~~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
    
    		// Emit S.Bar
    		Bar, <Bar />;
    		~~~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
    	}
    
    }
    
    namespace M {
    	// Emit M.S.Bar
    	S.Bar, <S.Bar />;
    }
    
    namespace M {
    	var M = 100;
    	// Emit M_1.Foo
    	Foo, <Foo />;
    	~~~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
    }
    